hook_check.txt
    Checking r2d2-blackboard v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-blackboard)
    Checking r2d2-mcp v8.2.0 (/mnt/d/XXXX/R2D2/r2d2-mcp)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `r2d2_cortex`
 --> r2d2-mcp/src/lib.rs:9:5
  |
9 | use r2d2_cortex::{CortexRegistry, models::minilm_embedder::MiniLmEmbedderAgent};
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `r2d2_cortex`
  |
  = help: if you wanted to use a crate named `r2d2_cortex`, use `cargo add r2d2_cortex` to add it to your `Cargo.toml`

error[E0432]: unresolved import `r2d2_cortex`
 --> r2d2-mcp/src/lib.rs:9:5
  |
9 | use r2d2_cortex::{CortexRegistry, models::minilm_embedder::MiniLmEmbedderAgent};
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `r2d2_cortex`
  |
  = help: if you wanted to use a crate named `r2d2_cortex`, use `cargo add r2d2_cortex` to add it to your `Cargo.toml`

warning: unused import: `tokio::sync::Mutex`
  --> r2d2-mcp/src/lib.rs:13:5
   |
13 | use tokio::sync::Mutex;
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed
  --> r2d2-mcp/src/lib.rs:35:61
   |
35 |         cortex.activate("MiniLmEmbedder-L6").await.map_err(|e| anyhow::anyhow!(e))?;
   |                                                             ^  ------------------ type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
35 |         cortex.activate("MiniLmEmbedder-L6").await.map_err(|e: /* Type */| anyhow::anyhow!(e))?;
   |                                                              ++++++++++++

Some errors have detailed explanations: E0282, E0432, E0433.
For more information about an error, try `rustc --explain E0282`.
warning: `r2d2-mcp` (lib) generated 1 warning
error: could not compile `r2d2-mcp` (lib) due to 3 previous errors; 1 warning emitted
